Product-Service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      imagePullSecrets:
        - name: productcred
      containers:
        - name: product-service
          image: didin8080/product:1
          ports:
            - containerPort: 8002
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "512Mi"
              cpu: "500m"
